--- a/Website/style.css
+++ b/Website/style.css
@@ -260,3 +260,13 @@ ul li a:hover{
 .icon ion-icon:hover{
     color: skyblue;
 }
+.myVideo{
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-height: 100%;
+    min-width: 100%;
+}
+div{
+    text-decoration: line-through;
+}
